feat(compiler): 增强Java编译器功能并优化类路径处理
- 在ClassPathResource中使用JavaFileObject.Kind.SOURCE.extension替代硬编码的".java"后缀
- 为CompilerUtil添加parentClassLoader参数的重载方法支持
- 更新FUNCTION_CLASS_FORMAT模板格式以支持动态导入包声明
- 修改异常处理将Exception替换为更具体的ClassNotFoundException
- 添加executeCode方法支持动态导入包和类的执行功能
- 新增JarFileUtil工具类用于处理JAR文件和依赖路径解析
- 重构JavaClassFileManager移除JDK版本特定的优化代码
- 在JavaSourceCompiler中添加类路径自动配置和HTTP URL检测功能
- 优化编译器的location设置和依赖路径收集机制
- 添加UrlCacheDiagnostic内部类解决JDK8的URL缓存问题
- 更新单元测试适配新的方法签名和功能变化